# sketch

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cli.html  cli_docs.html  cliff.toml  config_files_gen.html  configuration.html  executing_templates.html  extensible_configs.html  index.html  justfile  lsp.html  maintainers.html  package_json_presets.html  pre_release.sh  print.html  rendering_templates.html  searchindex.js  templating.html  toc.html  toc.js  ts_monorepo.html  ts_package_gen.html  tsconfig_presets.html  typescript.html  update_docs.sh  versions.html
json-schema/: Cargo.toml
json-schema/src/: main.rs
package-json/: Cargo.toml
package-json/src/: lib.rs  package_json_elements.rs
package-json/tests/: test.rs
pre-commit-config/: Cargo.toml
pre-commit-config/src/: lib.rs  pre_commit_elements.rs
scaffolder/: Cargo.toml  config.toml  config.yaml
scaffolder/src/: cli.rs  commands.rs  config.rs  config_elements.rs  errors.rs  json_files.rs  lib.rs  macros.rs  main.rs  merging_strategies.rs  moon.rs  package_json.rs  parsers.rs  paths.rs  pnpm.rs  rendering.rs  tera.rs  ts_config.rs  versions.rs
scaffolder/src/cli/: mod.rs  parsers.rs
scaffolder/src/package/: mod.rs  vitest.rs
scaffolder/src/package_json/: mod.rs
scaffolder/src/rendering/: filters.rs  mod.rs  tera.rs
scaffolder/src/ts_config/: mod.rs  tsconfig_defaults.rs  tsconfig_elements.rs
scaffolder/templates/: directories.j2  export_path.j2  man.j2  oxlint.json.j2  package.json.j2  person.j2  pnpm-workspace.yaml.j2  publish_config.j2  repository.j2  tsconfig.dev.json.j2  tsconfig.json.j2  tsconfig.options.json.j2  tsconfig.src.json.j2  type_acquisition.j2  utils.j2  watch_options.j2
scaffolder/templates/moon/: moon.yml.j2  tasks.yml.j2  toolchain.yml.j2
scaffolder/tests/circular_configs/: config.yaml  config2.toml
scaffolder/tests/circular_tsconfigs/: config.toml
scaffolder/tests/custom_templates/: custom_templates.toml
sketch/: Cargo.toml  askama.toml  build.rs  sketch.toml
sketch-it/: Cargo.toml
sketch-it/src/: commands.rs  config.rs  config_elements.rs  errors.rs  lib.rs  moon.rs
sketch-it/src/cli/: mod.rs
sketch-it/src/package_json/: package_json_elements.rs
sketch-it/src/rendering/: tera.rs
sketch-it/src/ts_config/: tsconfig_defaults.rs
sketch-it/templates/: bugs.j2  man.j2  pre-commit-config.yaml.j2  vitest.config.ts.j2
sketch-it/templates/moon/: moon.yml.j2  workspace.yml.j2
sketch-it/tests/circular_package_json/: config.toml
sketch/src/: cli.rs  commands.rs  config.rs  config_elements.rs  config_setup.rs  docker.rs  errors.rs  exec.rs  fs.rs  gh_workflow.rs  git_workflow.rs  init_repo.rs  lib.rs  macros.rs  main.rs  merging_strategies.rs  moon.rs  paths.rs  pnpm.rs  rust.rs  serde_strategies.rs  serde_utils.rs  ts.rs  ts_monorepo.rs  versions.rs
sketch/src/cli/: cli_elements.rs  cli_tests.rs  config_discovery.rs  exec_cmd.rs  mod.rs  parsers.rs  rust_cmds.rs  ts_cmds.rs
sketch/src/cli/cli_tests/: barrel_tests.rs  docker_tests.rs  examples_tests.rs  exec_tests.rs  extending_presets_tests.rs  generated_configs_tests.rs  gh_workflow_preset.rs  gitignore_preset.rs  mod.rs  overwriting_tests.rs  presets_tests.rs  rendering_tests.rs  repo_preset_tests.rs  rust_gen_tests.rs  tests_macros.rs  ts_gen_tests.rs  vars_files_tests.rs
sketch/src/cli/cli_tests/ts_tests/: mod.rs  (+2 more)
sketch/src/cli/ts_cmds/: ts_barrel.rs
sketch/src/compose/: mod.rs
sketch/src/config/: config_elements.rs  config_setup.rs  mod.rs
sketch/src/docker/: compose.rs  mod.rs
sketch/src/docker/compose/: mod.rs  service.rs
sketch/src/exec/: mod.rs
sketch/src/git_workflow/: mod.rs
sketch/src/init_repo/: gitignore.rs  mod.rs  pre_commit.rs
sketch/src/init_repo/pre_commit/: mod.rs  pre_commit_elements.rs
sketch/src/licenses/: mod.rs
sketch/src/package/: mod.rs  vitest.rs
sketch/src/package_json/: mod.rs  package_json_elements.rs
sketch/src/rendering/: mod.rs
sketch/src/rust/: mod.rs  package.rs  profile_settings.rs  workspace.rs
sketch/src/templating/: custom_templating.rs  mod.rs  tera.rs  tera_filters.rs  tera_functions.rs  tera_setup.rs  tera_tests.rs
sketch/src/ts/: mod.rs  oxlint.rs  package.rs  package_json.rs  pnpm.rs  ts_config.rs  ts_monorepo.rs  vitest.rs
sketch/src/ts/oxlint/: mod.rs  plugins.rs
sketch/src/ts/package/: mod.rs
sketch/src/ts/package_json/: mod.rs  package_json_elements.rs
sketch/src/ts/pnpm/: mod.rs  pnpm_elements.rs
sketch/src/ts/ts_config/: mod.rs  tsconfig_defaults.rs  tsconfig_elements.rs  tsconfig_tests.rs
sketch/src/ts_config/: mod.rs  tsconfig_defaults.rs
sketch/templates/: gitignore.j2  package.json.j2  pnpm-workspace.yaml.j2  pre-commit-config.yaml.j2  tests_setup.ts.j2  utils.j2  watch_options.j2
sketch/templates/package_json/: bin.j2  funding.j2  funding_data.j2
sketch/templates/repo_root/: gitignore.j2
sketch/templates/svelte/: package.json.j2
sketch/templates/ts/: barrel.ts.j2  pnpm-workspace.yaml.j2  vitest.config.ts.j2
sketch/templates/ts/package_json/: bin.j2  package.json.j2  peer_dependencies_meta.j2  person.j2  publish_config.j2
sketch/templates/ts/tsconfig/: tsconfig.json.j2  type_acquisition.j2
sketch/tests/: bun.yaml  circular_imports_tests.rs  package_gen_tests.rs  paths_resolution.rs  templating_tests.rs  tsconfig_tests.rs
sketch/tests/cargo_toml_tests/: cargo_toml_tests.yaml
sketch/tests/circular_configs/: config2.toml  sketch.toml  sketch.yaml
sketch/tests/circular_package_json/: sketch.toml
sketch/tests/circular_tsconfigs/: sketch.toml
sketch/tests/commands_tests/: cmd_from_file.j2  cmd_template.j2  commands_tests.toml
sketch/tests/custom_templates/: custom_templates.toml  custom_templates.yaml  single_file.j2
sketch/tests/paths_resolution/: root_config.toml  root_dir_resolution.toml
sketch/tests/paths_resolution/nested/: nested_config.toml
sketch/tests/templates/: templates_tree.txt
sketch/tests/vars_files/: vars.json  vars.toml  vars.yaml
ts-config/: Cargo.toml
ts-config/src/: lib.rs  tsconfig_elements.rs
ts-config/tests/: test.rs
(+246 files in other folders)
