[workspace]
members = ["json-schema", "sketch"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
authors = ["Rick-Phoenix <https://github.com/Rick-Phoenix>"]

[workspace.dependencies]
paste = "1"
askama = { version = "0.14.0", default-features = false, features = [
  "config",
  "derive",
  "std",
] }
maplit = "1.0.2"
regex = "1.11.1"
thiserror = "2.0.16"
convert_case = "0.8.0"
