[workspace]
members = [
  "docker-compose-config",
  "gh-workflow",
  "json-schema",
  "oxlint-config",
  "package-json",
  "pnpm-config",
  "pre-commit-config",
  "rust-manifest",
  "sketch",
  "ts-config",
]
resolver = "3"

[profile.dev]
debug = 1

[profile.dev.package."*"]
opt-level = 1
debug = false

[workspace.package]
edition = "2024"
license = "MPL-2.0"
authors = ["Rick-Phoenix <https://github.com/Rick-Phoenix>"]

[workspace.dependencies]
anyhow = "1"
toml_edit = { version = "0.24.0", features = ["serde"] }
indexmap = { version = "2.11", features = ["serde"] }
pretty_assertions = "1"
serde = { version = "1", features = ["derive"] }
merge-it = { version = "0.1.0", features = ["indexmap"] }
paste = "1"
schemars = { version = "1", features = ["indexmap2"] }
serde_json = { version = "1", features = ["preserve_order"] }
clap = { version = "4.5", features = ["derive", "string"] }
maplit = "1"
regex = "1"
thiserror = "2"
convert_case = "0.8"

[workspace.lints.clippy]
redundant_closure = "allow"
vec_init_then_push = "allow"
# Until rustfmt supports it and there is a quick fix
manual_let_else = "allow"
# These should only be enabled in late development
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# missing_inline_in_public_items = "warn"
float_cmp = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
collection_is_never_read = "warn"
derive_partial_eq_without_eq = "warn"
equatable_if_let = "allow"
future_not_send = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
literal_string_with_formatting_args = "warn"
missing_const_for_fn = "warn"
needless_collect = "warn"
needless_pass_by_ref_mut = "warn"
needless_type_cast = "warn"
non_send_fields_in_send_ty = "warn"
redundant_clone = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
too_long_first_doc_paragraph = "warn"
trait_duplication_in_bounds = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
checked_conversions = "warn"
cloned_instead_of_copied = "warn"
collapsible_else_if = "warn"
comparison_chain = "warn"
copy_iterator = "warn"
elidable_lifetime_names = "warn"
explicit_into_iter_loop = "warn"
flat_map_option = "warn"
format_push_string = "warn"
if_not_else = "allow"
ignored_unit_patterns = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
into_iter_without_iter = "warn"
invalid_upcast_comparisons = "warn"
ip_constant = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_not_returning_iterator = "warn"
iter_without_into_iter = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
manual_ilog2 = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_midpoint = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
maybe_infinite_iter = "warn"
mismatching_type_param_order = "warn"
mut_mut = "warn"
naive_bytecount = "warn"
needless_pass_by_value = "warn"
needless_raw_string_hashes = "warn"
no_effect_underscore_binding = "warn"
option_as_ref_cloned = "warn"
option_option = "warn"
ref_option = "warn"
ref_option_ref = "warn"
return_self_not_must_use = "warn"
must_use_candidate = "allow"
same_functions_in_if_condition = "warn"
stable_sort_primitive = "warn"
string_add_assign = "warn"
struct_excessive_bools = "warn"
struct_field_names = "warn"
trivially_copy_pass_by_ref = "warn"
unchecked_time_subtraction = "warn"
uninlined_format_args = "warn"
unnecessary_box_returns = "warn"
unnecessary_debug_formatting = "warn"
unnecessary_join = "warn"
unnecessary_literal_bound = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
unused_async = "warn"
unused_self = "warn"
