[package]
name = "json-schema"
publish = false
edition.workspace = true

[package.metadata.release]
release = false

[dependencies]
sketch-it = { path = "../sketch/", features = ["schemars"] }
schemars = { workspace = true }
serde_json = { workspace = true }
paste = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
