[package]
name = "scaffolder"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
askama = { workspace = true }
figment = { version = "0.10.19", features = ["toml", "env"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
clap = "4.5.46"
thiserror = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
