[package]
name = "scaffolder"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
askama = { workspace = true }
figment = { version = "0.10.19", features = ["toml", "env", "yaml"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5.46", features = ["derive", "env"] }
thiserror = { workspace = true }
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2.5.7"
futures = "0.3.31"
serde_yaml_ng = "0.10.0"
convert_case = { workspace = true }
regex = { workspace = true }
maplit = { workspace = true }
paste = { workspace = true }
merge = "0.2.0"
tera = "1.20.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
