[package]
name = "sketch-it"
version = "0.1.0-beta.1"
description = "A rapid templating and generation CLI tool"
categories = ["command-line-utilities"]
repository = "https://github.com/Rick-Phoenix/sketch-it"

edition.workspace = true
license.workspace = true
authors.workspace = true

readme = true

[[bin]]
name = "sketch"
path = "src/main.rs"

[package.metadata.release]
pre-release-hook = [
  "sh",
  "-c",
  "cd .. ; cargo test --all-features; git cliff --latest --prepend CHANGELOG.md --tag \"{{version}}\";",
]

[dependencies]
askama = { workspace = true }
figment = { version = "0.10.19", features = ["toml", "env", "yaml", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5.46", features = ["derive", "env"] }
thiserror = { workspace = true }
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2.5.7"
futures = "0.3.31"
serde_yaml_ng = "0.10.0"
convert_case = { workspace = true }
regex = { workspace = true }
maplit = { workspace = true }
paste = { workspace = true }
merge = "0.2.0"
tera = "1.20.0"
indexmap = { version = "2.11.0", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4"], optional = true }

[features]
uuid = ["dep:uuid"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
