[package]
name = "sketch-it"
version = "0.5.0"

description = "🖌️ Templating made simple. A tool to define and generate files and reusable project structures"
categories = ["command-line-utilities", "development-tools"]
keywords = ["boilerplate", "generation", "templating"]
repository = "https://github.com/Rick-Phoenix/sketch"

edition.workspace = true
license.workspace = true
authors.workspace = true

readme = true

[lints]
workspace = true

[[bin]]
name = "sketch"
path = "src/main.rs"

[package.metadata.release]
tag-message = "chore: Release version {{version}}"
tag-name = "v{{version}}"
allow-branch = ["main"]
pre-release-hook = ["bash", "-c", "cd .. && ./pre_release.sh {{version}}"]

[dev-dependencies]
pretty_assertions = "1.4.1"
assert_cmd = "2.0.17"
clap-markdown = "0.1.5"
indoc = "2.0.6"

[dependencies]
toml_edit = { version = "0.24.0", features = ["serde"] }
globset = "0.4"
walkdir = "2.5"
semver = { version = "1" }
schemars = { workspace = true, optional = true }
toml = { version = "0.9.11", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"] }
url = { version = "2", optional = true }
futures = { version = "0.3", optional = true }
serde_yaml_ng = "0.10"
convert_case = { workspace = true }
regex = { workspace = true }
maplit = { workspace = true }
paste = { workspace = true }
merge-it = { workspace = true }
tera = "1.20"
indexmap = { version = "2.11", features = ["serde"] }
uuid = { version = "1.18", features = ["v4"] }
serde_repr = "0.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
npm-version = ["dep:url", "dep:futures", "dep:reqwest"]
schemars = ["dep:schemars"]
