[package]
name = "sketch-it"
version = "0.6.0"

description = "A tool to define and generate files and reusable project structures"
categories = ["command-line-utilities", "development-tools"]
keywords = ["boilerplate", "generation", "templating"]
repository.workspace = true

edition.workspace = true
license.workspace = true
authors.workspace = true

readme = true

[lints]
workspace = true

[[bin]]
name = "sketch"
path = "src/main.rs"

[package.metadata.release]
tag = true

[dev-dependencies]
pretty_assertions = { workspace = true }
assert_cmd = "2.0.17"
clap-markdown = "0.1.5"
indoc = "2.0.6"

[dependencies]
anyhow = { workspace = true }
docker-compose-config = { version = "0.1.0", path = "../docker-compose-config/", features = [
  "presets",
] }
gh-workflow-config = { version = "0.1.0", path = "../gh-workflow/", features = [
  "presets",
] }
rust-manifest = { version = "0.1.0", path = "../rust-manifest/" }
pre-commit-config = { version = "0.1.0", path = "../pre-commit-config" }
oxlint-config = { version = "0.1.0", path = "../oxlint-config/" }
package-json-config = { version = "0.1.0", path = "../package-json/", features = [
  "pnpm",
] }
pnpm-config = { version = "0.1.0", path = "../pnpm-config/" }
typescript-config = { version = "0.1.0", path = "../ts-config/" }
toml_edit = { workspace = true }
globset = "0.4"
walkdir = "2.5"
semver = { version = "1" }
schemars = { workspace = true, optional = true }
toml = { version = "0.9.11", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"] }
url = { version = "2", optional = true }
futures = { version = "0.3", optional = true }
serde_yaml_ng = "0.10"
convert_case = { workspace = true }
regex = { workspace = true }
maplit = { workspace = true }
paste = { workspace = true }
merge-it = { workspace = true }
tera = "1.20"
indexmap = { workspace = true }
uuid = { version = "1.18", features = ["v4"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
npm-version = ["dep:url", "dep:futures", "dep:reqwest"]
schemars = [
  "dep:schemars",
  "typescript-config/schemars",
  "pnpm-config/schemars",
  "package-json-config/schemars",
  "pre-commit-config/schemars",
  "oxlint-config/schemars",
  "rust-manifest/schemars",
  "gh-workflow-config/schemars",
  "docker-compose-config/schemars",
]
