[package]
name = "ts-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dev-dependencies]
maplit = { workspace = true }
pretty_assertions = { workspace = true }

[dependencies]
merge-it = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true

[features]
default = []
schemars = ["dep:schemars"]
